# youtube-ai-video-analyzer

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  vercel.json
backend/: agent.py  settings.py  urls.py  views.py  wsgi.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.css
