[tool.poetry]
name = "youtube-ia-video-analyzer"
version = "0.1.0"
description = "Langchain agent Youtube video analyzer"
authors = ["julienlucas <hello@julienlucas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
django = "^4.1.3"
dotenv = "^0.9.9"
langchain = "^0.3.27"
langchain-community = "^0.3.27"
langchain-openai = "^0.3.28"
python-dotenv = "^1.1.1"
pytube = "^15.0.0"
youtube-transcript-api = "^1.2.1"
yt-dlp = "^2025.7.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
